# RERAG

./: .env  .env.example  .env.server  .gitignore  .gitmodules  .install.md.swp  .installer1.md.swp  .~lock.allign.odt#  .~lock.temp.odt#  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  INSTALL.md  Justfile  README.md  SEARCH.md  SPEED.md  a  agent.db  agent.db.backup  agent.toml  agentic.md  allign.odt  batch1_mod_cleanup.py  batch2_kill_hardware_wrapper.py  batch3_kill_onnx_info.py  batch4_llm_defaults_iouring.py  batch5_move_graph_indexer.py  corp-settings.odt  d  docker-backup-v1.0.sh  docker-compose.alt-ports.yml  docker-compose.full-alt-ports.yml  docker-compose.full.yml  docker-compose.infrastructure.yml  docker-compose.yml  g  installer2.md  lora.md  (+15 more)
backend/: .env  Cargo.toml  agent.db  os
backend/benches/: vector_storage.rs
backend/data/: knowledge_graph.json
backend/documents/: sample_article.txt
backend/src/: agent.rs  agent.rs.bak  agent.rs.bak2  agent.rs.bak3  agent_memory.rs  capabilities.rs  config.rs  corpus_registry.rs  doc_ir.rs  embedder.rs  extractor.rs  file_watcher.rs  gguf_tokenizer.rs  index.rs  inference_gateway.rs  lib.rs  lifecycle.rs  main.rs  main.rs.bak  mime_detect.rs  normalizer.rs  path_manager.rs  retriever.rs  tokenizer_diff.rs
backend/src/api/: agent_chat.rs  agentic_monitor_routes.rs  config_routes.rs  corpus_routes.rs  docker.rs  graph_routes.rs  graph_routes.rs.bak  helpers.rs  memory_routes.rs  mod.rs  mod.rs.ba  mod.rs.bak  mod.rs.bak.20260321_183728  mod.rs.bak.20260321_215612  mod.rs.bak.20260321_220238  mod.rs.bak.20260321_223427  mod.rs.bak4  mod.rs.bak5  mod.rs.bak6  mod.rs.bak7  mod.rs.bak8  mod.rs.bak_grafana_scope  monitor_routes.rs  pdf_extraction_routes.rs  runtime_routes.rs  sys_routes.rs  sys_routes.rs.bak  tool_routes.rs  training.rs  upload_search.rs
backend/src/cache/: cache_layer.rs  mod.rs  redis_cache.rs
backend/src/db/: api_keys.rs  chunk_settings.rs  corpora.rs  extraction_records.rs  golden_sample.rs  llm_settings.rs  ner_settings.rs  param_hardware.rs  param_hardware.rs.bak  param_hardware.rs.bak.20260321_183728  path_resolver.rs  pdf_rows.rs  schema.sql  schema_init.rs
backend/src/graph/: agent_memory_graph.rs  client.rs  config.rs  entity_reconciler.rs  graph_retriever.rs  knowledge_builder.rs  mod.rs  mod.rs.bak  petgraph_runtime.rs  petgraph_runtime_test.rs  schema.rs
backend/src/installer/: checks.rs  config.rs  detector.rs  env_validator.rs  health.rs  uninstaller.rs  wizard.rs
backend/src/memory/: agent.rs  chunker.rs  chunker_factory.rs  llm_provider.rs  mod.rs  prompt_cache.rs  vector_store.rs
backend/src/monitoring/: canon_stats.rs  chunking_stats.rs  config.rs  config_phase15.rs  distributed_tracing.rs  extraction_stats.rs  handlers.rs  health.rs  histogram_config.rs  metrics.rs  mod.rs  ollama_drift.rs  onnx_metrics.rs  otel_config.rs  otlp_exporter.rs  pointer_stats.rs  preprocess_stats.rs  rate_limit_middleware.rs  resource_attribution.rs  rig_stats.rs  tool_alerts.rs  tool_costs.rs  tool_dependencies.rs  tool_stats.rs  tool_trends.rs  trace_alerting.rs  trace_context.rs  trace_middleware.rs  tracing_config.rs  ui_metrics.rs  upload_concurrency_middleware.rs
backend/src/pdf/: column_detect.rs  ir_builder.rs  layout_model.rs  line_grouper.rs  mod.rs  native_extractor.rs  page_type.rs  table_model.rs  word_extractor.rs
backend/src/perf/: arena.rs  batch.rs  bloom.rs  cache_aligned.rs  compression.rs  connection_pool.rs  grpc.rs  hnsw.rs  http2.rs  hybrid_search.rs  integration.rs  io_uring.rs  mixed_precision.rs  mod.rs  onnx_embedder.rs  product_quantization.rs  quantization.rs  request_coalescing.rs  reranking.rs  semantic_cache.rs  sharding.rs  simd.rs  sqlite_opt.rs  streaming.rs  tiered_storage.rs
backend/src/rig_tools/: graph_search.rs  memory_recall.rs  memory_store.rs  mod.rs  pdf_lines.rs  tantivy_search.rs
backend/src/security/: rate_limiter.rs
backend/src/settings/: kind.rs  mod.rs  recovery.rs  registry.rs  store.rs
backend/src/tools/: calculator.rs  classifier.rs  code_execution.rs  database_query.rs  entity_extractor.rs  file_analyzer.rs  image_generation.rs  memory_tool.rs  mod.rs  ner_extractor.rs  notification.rs  query_rewriter.rs  result_formatter.rs  scheduler.rs  semantic_search.rs  sentiment.rs  spell_checker.rs  spell_checker_dict.txt  summarizer.rs  tool_cache.rs  tool_chain_executor.rs  tool_composer.rs  tool_executor.rs  tool_permissions.rs  tool_rate_limiter.rs  tool_selector.rs  translator.rs  url_fetch.rs  web_search.rs
backend/src/training/: data_collector.rs  feedback.rs  mod.rs
backend/tests/: e2e_test.rs  hardware_config_model_sync.rs  hardware_num_thread_e2e.rs  onnx_basic.rs  pdf_relational.rs  petgraph_serialization.rs.withneo  pointerrag_threshold_roundtrip.rs  rate_limit.rs  rate_limit_lru_eviction.rs  rate_limit_middleware_integration_test.rs  rate_limit_read_write.rs  retriever_tests.rs  scan_retriever.rs  tool_trends.rs  trace_propagation.rs  w3c_trace_context.rs
documents/: CUSTOM_MODEL_TRAINING.md  Cargo.toml  TODO.MD  Untitled 1.html  ag_system.txt  chunks.html  gemin-changes.txt  iouring.txt  mode.txt  monitor_overview.txt  patch_docker_rich_modals.py  prompts.md  rust-perf.txt  test-xfce.sh  test_embed.txt  test_history.txt  test_ner.txt  tok.odt  tokenizer.odt  upload_pipeline.md  uv.txt
frontend/fro/: Cargo.toml  Dioxus.tom  Trunk.toml  build.rs  index.html  s  tailwind.config.js
frontend/fro/src/: .~lock.bpe.odt#  api.rs  api.rs.bak  app.rs  bpe.odt
installer/: Cargo.toml  README.md  build-appimage.sh  build.rs  falkordb.pin
installer/assets/: ag-installer.desktop  style.css
installer/grafana/: embedding_dashboard.json
installer/scheduled-tasks/: ag-stack.xml.tmpl  ag.xml.tmpl
installer/src/: app.rs  bundled.rs  detection.rs  first_run.rs  install_steps.rs  main.rs  paths.rs  prompts.rs  uninstall.rs  update_check.rs
installer/src/platform/: linux.rs  mod.rs  windows.rs
installer/src/ui/: detection_screen.rs  first_run_form.rs  mod.rs  progress.rs  prompts.rs  shell_open.rs  (+2 more)
installer/wix/: main.wxs
(+237 files in other folders)
