[package]
name = "ag"
version = "13.1.2"
edition = "2021"
authors = ["pde"]

[dependencies]
# Core
llm = "1.3.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tantivy = "0.24.2"
pdf-extract = "0.7"

# Web Framework
actix-web = "4.11.0"
actix-cors = "0.7"
actix-multipart = "0.7.2"
actix-service = "2"

# Async Runtime
tokio = { version = "1.47.1", features = ["full"] }
futures-util = "0.3.31"

# Serialization
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }

# File System & Utilities
notify = "6"
dirs = "6.0.0"
ctrlc = "3.5.0"
tempfile = "3"
walkdir = "2"
fs2 = "0.4"
thiserror = "1.0"

# Data Processing
seahash = "4.1.0"
rayon = "1.10"
regex = "1.10"
lru = "0.12"
infer = "0.16"  # MIME type detection from file magic bytes

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
prometheus = "0.13"

# OpenTelemetry (Phase 16) - UPDATED TO 0.21
opentelemetry = { version = "=0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.21.2", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "=0.14.0", features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "=0.22.0"
opentelemetry-stdout = { version = "0.2", features = ["trace"] }

# gRPC support for OTLP
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

# Time & IDs
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
dotenvy = "0.15"

# Redis (Phase 12)
redis = { version = "0.32", features = ["connection-manager", "tokio-comp", "aio"] }

# HTTP Client
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "blocking"] }

# Utilities
once_cell = "1.19"
lazy_static = "1.5.0"
async-trait = "0.1.89"
parking_lot = "0.12"
num_cpus = "1.16.0"
wgpu = "0.19.1"

# Installer Dependencies (v13.1.2) - OPTIONAL
clap = { version = "4.5", optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }
dialoguer = { version = "0.11", optional = true }
home = { version = "0.5", optional = true }
directories = { version = "5.0", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
http = "1.3.1"
libc = "0.2.177"

[features]
default = []
profiling = []

# Phase 13.1.0a: Installer feature - enables all installer functionality
installer = [
    "clap",
    "indicatif",
    "colored",
    "dialoguer",
    "home",
    "directories",
    "tar",
    "flate2",
    "sha2"
]

# Full feature set: all capabilities
full = ["installer", "rl_yaml"]
rl_yaml = ["serde_yaml"]

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# fastembed is only available on Linux/macOS (ONNX Runtime doesn't support Windows GNU target)
# On Windows, the hash-based fallback embedder is used automatically
[target.'cfg(not(target_os = "windows"))'.dependencies]
fastembed = { version = "5.8.1", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
