[package]
name = "ag"
version = "13.1.2"
edition = "2021"
authors = ["pde"]

[dependencies]
# Core
rusqlite = { version = "0.37.0", features = ["bundled"] }
tantivy = "0.24.2"

# Web Framework
actix-web = "4.11.0"
actix-cors = "0.7"
actix-multipart = "0.7.2"
actix-service = "2"

# Async Runtime
tokio = { version = "1.47.1", features = ["full"] }
futures-util = "0.3.31"
futures = "0.3"  # Async stream/combinator utilities

# Serialization
serde_json = "1.0.145"
shimmytok = "0.4"
rig-core = "0.34"
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
rkyv = { version = "0.8", features = ["bytecheck"] }

# File System & Utilities
notify = "6"
dirs = "6.0.0"
ctrlc = "3.5.0"
tempfile = "3"
walkdir = "2"
fs2 = "0.4"
thiserror = "1.0"
glob = "0.3"
memmap2 = "0.9"  # Memory-mapped file access for zero-copy vectors

# Data Processing
seahash = "4.1.0"
rayon = "1.10"
regex = "1.10"
lru = "0.12"
infer = "0.16"  # MIME type detection from file magic bytes
zip = "2"        # ZIP archive reading for DOCX/ODT extraction
calamine = "0.26" # Spreadsheet parsing: XLSX, ODS, CSV
chardetng = "0.1" # Encoding detection for non-UTF-8 files (Mozilla)
encoding_rs = "0.8" # Encoding transcoding (Latin-1, Windows-1252, etc.)
unicode-normalization = "0.1" # NFC/NFKC normalization

# Performance Optimizations (Phase 1)
lz4_flex = "0.11"           # Fast compression for vectors
wide = "0.7"                 # SIMD operations
instant-distance = "0.6"     # HNSW approximate nearest neighbor
bloomfilter = "1.0"          # Fast negative lookups
bumpalo = "3.16"             # Arena allocator for temp allocations

# Performance Optimizations (Phase 2)
dashmap = "6.0"              # Concurrent hashmap for caching
crossbeam = "0.8"            # Lock-free data structures
smallvec = "1.13"            # Stack-allocated small vectors
byteorder = "1.5"            # Efficient byte serialization
half = "2.4"                 # FP16 support for mixed precision
fnv = "1.0"                  # Fast non-cryptographic hashing

# ONNX Runtime (Phase 26) - 2-10x faster inference
# Requires: ORT_DYLIB_PATH=/path/to/libonnxruntime.so
ort = { version = "2.0.0-rc.9", optional = true }
ndarray = "0.16"             # For ONNX tensor operations

# io_uring (Phase 15) - 2-3x faster file I/O on Linux
# Only available on Linux with kernel 5.1+
tokio-uring = { version = "0.5", optional = true }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
prometheus = "0.13"

# OpenTelemetry (Phase 16) - UPDATED TO 0.21
opentelemetry = { version = "=0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.21.2", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "=0.14.0", features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "=0.22.0"
opentelemetry-stdout = { version = "0.2", features = ["trace"] }

# gRPC support for OTLP
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

# Time & IDs
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
dotenvy = "0.15"

# Redis (Phase 12)
redis = { version = "0.32", features = ["connection-manager", "tokio-comp", "aio"] }

# HTTP Client
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "blocking", "multipart", "stream"] }

# XML parsing for structured DOCX/PPTX extraction
quick-xml = "0.38"

# Utilities
once_cell = "1.19"
lazy_static = "1.5.0"
async-trait = "0.1.89"
parking_lot = "0.12"
num_cpus = "1.16.0"
sysinfo = "0.32"  # System memory and CPU detection
wgpu = "0.19.1"

# Installer Dependencies (v13.1.2) - OPTIONAL
clap = { version = "4.5", optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }
dialoguer = { version = "0.11", optional = true }
home = { version = "0.5", optional = true }
directories = { version = "5.0", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
http = "1.3.1"
libc = "0.2.177"

# FalkorDB Knowledge Graph (Phase 27) - GraphRAG support
# Enables graph-augmented retrieval for multi-hop reasoning.
# FalkorDB is a Redis module; the client speaks RESP, not the Bolt protocol.
falkordb = { version = "0.2", optional = true, features = ["tokio"] }

# petgraph Runtime (Phase 28) - In-memory graph for sub-ms traversal
# Graph compiled ONCE from FalkorDB at startup → petgraph serves ALL queries in RAM
petgraph = { version = "0.6", features = ["serde-1"] }
bincode = "1.3"  # Fast graph persistence to disk
tokenizers = { version = "0.22.2", default-features = false, features = ["http"] }


[features]
default = ["onnx", "io_uring", "graph"]
profiling = []


# Phase 13.1.0a: Installer feature - enables all installer functionality
installer = [
    "clap",
    "indicatif",
    "colored",
    "dialoguer",
    "home",
    "directories",
    "tar",
    "flate2",
    "sha2"
]

# Full feature set: all capabilities
full = ["installer", "rl_yaml", "onnx", "graph"]
rl_yaml = ["serde_yaml"]

# ONNX Runtime for 2-10x faster embeddings
onnx = ["ort"]

# io_uring for 2-3x faster file I/O (Linux only)
io_uring = ["tokio-uring"]

# Knowledge Graph for GraphRAG (multi-hop reasoning) — FalkorDB backend
graph = ["falkordb"]

# Native in-process PDF extraction: lopdf (bboxes) + extractous (fallback) + heuristic classifier
# ORT-based layout model (PubLayNet DETR) is a planned upgrade — see layout_model.rs TODO.
# Enable with: cargo build --features layout_ml
# Activate at runtime with: LAYOUT_ML_ENABLED=true
layout_ml = ["extractous", "lopdf", "ort", "pdfium-render", "image"]

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3"

[[bench]]
name = "vector_storage"
harness = false



# fastembed is only available on Linux/macOS (ONNX Runtime doesn't support Windows GNU target)
# On Windows, the hash-based fallback embedder is used automatically
[target.'cfg(not(target_os = "windows"))'.dependencies]
fastembed = { version = "5.8.1", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }

# Native PDF extraction pipeline — lopdf (word bboxes) + extractous (text fallback)
[target.'cfg(not(target_os = "windows"))'.dependencies.extractous]
version = "0.3"
optional = true

[target.'cfg(not(target_os = "windows"))'.dependencies.lopdf]
version = "0.33"
optional = true

[target.'cfg(not(target_os = "windows"))'.dependencies.pdfium-render]
version = "0.8"
features = ["image"]
optional = true

[target.'cfg(not(target_os = "windows"))'.dependencies.image]
version = "0.25"
optional = true
