[package]
name = "ag-installer"
# Kept in lockstep with the release tag. CI's "Verify Cargo.toml version
# matches tag" step in .github/workflows/release.yml errors before the
# build if this drifts from ${TAG#v}. Bump this in the same commit that
# precedes a release tag.
version = "1.2.4"
edition = "2021"
authors.workspace = true
description = "GUI installer for RERAG — Linux + Windows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PieterdenEngelse/RERAG"

# Phase A scope: minimal Dioxus desktop window, version surfaces via --version,
# and the binary is what the AppImage build packages. Real install logic lands
# in Phase C/D.

[[bin]]
name = "ag-installer"
path = "src/main.rs"

[dependencies]
# Pin to exact same Dioxus version the dashboard uses for ecosystem consistency.
dioxus = { version = "=0.7.9", features = ["desktop"] }
dioxus-signals = "0.7.0"

# Async runtime + std-streaming for subprocess output in later phases.
tokio = { version = "1", features = ["full"] }

# Subprocess + filesystem ergonomics for later phases.
anyhow = "1"
thiserror = "1"

# Serde for ag.env munging + update-check JSON parsing.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging — written to journalctl when the installer runs via the AppImage's
# AppRun shim, or stdout when invoked directly for dev iteration.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for /api/tags (Ollama probe) and GitHub Releases update check.
# rustls instead of openssl — no native dep, AppImage stays portable.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Diff for ag.service drift detection.
similar = "2"

# Install-log timestamps (UTC) in Phase D.2 + build-time stamping in build.rs.
chrono = "0.4"

# Windows-only deps for platform::windows probes + path resolution. Filed
# under `[target.'cfg(windows)']` so they never enter the Linux resolution
# graph or AppImage build. See `docs/wininstall.md §2` / `winsteps.md PR2.2`.
[target.'cfg(windows)'.dependencies]
# Cross-platform free-disk query — replaces `df -BG` from the Linux probe.
fs2 = "0.4"
# Cross-platform total-RAM query — replaces `/proc/meminfo` from the Linux probe.
sysinfo = "0.32"
# Read ProductName + DisplayVersion from HKLM for the distro string.
winreg = "0.55"

[build-dependencies]
# build.rs stamps the git SHA and build timestamp into the binary so the
# update check + dry-run summary can report what was built when.
chrono = "0.4"

# Read by cargo-wix (v0.3+) when running `cargo wix -p ag-installer` on
# Windows. GUIDs are PINNED across releases — never regenerate them in
# place, or Windows Installer's upgrade semantics break (users would get
# a side-by-side install instead of an in-place upgrade). The
# UpgradeCode also appears in `installer/wix/main.wxs`; both must match.
# license = false / eula = false skip the license-acceptance dialog —
# RERAG is MIT-OR-Apache-2.0; we don't gate install on dialog clickthrough.
[package.metadata.wix]
upgrade-guid = "0ACE1A07-5A78-4899-8AC6-C96EB28CAB27"
path-guid    = "90F8B802-32B4-4434-BD30-F7FD282790A7"
license      = false
eula         = false
