[package]
name = "fro"
version = "0.1.0"
authors = ["pde"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3" }
# Use compatible manganis version for Dioxus 0.6.3
manganis = "0.6"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "DomTokenList", "Storage", "Navigator", "Clipboard", "console", "Blob", "BlobPropertyBag", "FormData", "FileList", "File", "Request", "RequestInit", "RequestMode", "Response", "Headers", "ReadableStream", "ReadableStreamDefaultReader"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# State management
dioxus-signals = "0.6.3"

# HTTP client improvements
reqwest = { version = "0.11", features = ["json", "stream"] }
wasm-bindgen-futures = "0.4"

# Markdown rendering (for displaying LLM responses)
markdown = "1.0"

# WebSocket for streaming responses (optional - uncomment if needed)
# tokio = { version = "1", features = ["rt"] }
# tokio-tungstenite = "0.21"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/router"]

